--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -16,7 +16,7 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11714758.md#1" target="_blank">加拿大国会特别委员会成立 审查加中关系</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11714758.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5df0543ec6c22-150x120.jpg" align ="left"></a>联邦保守党外交评论员、众议员奥图尔（Erin O'Toole）周二（12月10日）呼吁特鲁多政府拿出实质行动来处理加中关系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 11:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713860.md#1" target="_blank">众院民主党提2项弹劾指控 川普回应：荒谬</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713860.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1193118589-150x120.jpg" align ="left"></a>美国众议院民主党人周二（12月10日）早上宣布针对总统川普（特朗普）的两项弹劾条款，分别是滥用职权和妨碍国会听证。川普回应说，民主党知道事实并非如此，却拒绝承认！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 12:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713745.md#1" target="_blank">藏身家具从墨西哥偷渡美国 11中国人被拘</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713745.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1134848462-150x120.jpg" align ="left"></a>来自官方的消息称，美国海关与边境保护局的官员于上周末挫败一起涉嫌偷渡案。他们在对一辆从圣伊西德罗入境口岸过境的搬家卡车进行检查时，发现11名中国人藏身于车上的家具里。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 11:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11723449.md#1" target="_blank">陕西工人遭欠薪申请仲裁 人社局称人手不足拒绝</a><br></h3>陕西榆林子洲县三丰油脂公司讨薪工人到当地人社局申请仲裁，却收到劳动争议仲裁厅“人员不够，不受理案件”的回复文书，近日，这份半年前开出的“不予受理案件通知书”在网上曝光，引发争议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 3:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713237.md#1" target="_blank">大陆出现二例新H9N2流感病例</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713237.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/06/60930093350685-594x400-150x120.jpg" align ="left"></a>世界卫生组织（WHO）于12月4日公布，中国大陆日前通报了2例新增H9N2流感病例，为中国大陆此流行季（10月起）首2例新型A型流感病例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 6:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11723514.md#1" target="_blank">山西女子修脚店拔肉刺被收费4.6万元</a><br></h3>近日，山西孝义市民郭先生的妻子因脚底长肉刺去修脚店治疗，拔一根肉刺10元，最后竟花费4.66万元。郭先生怀疑被骗，店主称拔出后当场数，至于是不是拔出4660根则不清楚。最后经调解，店方退回4万多元。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 2:26 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11723409.md#1" target="_blank">西安男子喝没煮熟豆浆致食物中毒</a><br></h3>陕西西安市民张先生经常会在公司附近一家早餐店吃早饭。12月13日，他喝了一碗豆浆后不久便开始头昏想吐、眼睛看不清东西，后来意识到可能是喝了没煮熟的豆浆导致食物中毒。有专家表示，生豆浆里含有植物红细胞凝集素、皂苷等成分，确实可能会引起中毒现象。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 1:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/14/n11722193.md#1" target="_blank">每日三退声明精选（2019/12/13）</a><br></h3>在youtube上看到了共党迫害善良的人，使我感到愤怒，可又无能为力。我小时加入过少先队员，现今知晓善恶自愿退出少先队。虽然我的举动微不足道，希望可以在退党、退团、退队的人数中加上我一个。永远支持真善忍，愿所有人早日知道真相，并脱离魔鬼的掌控。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 10:29 AM							</td></tr>
