--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,6 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nhrnni253/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nhrnni253/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729071.md#1" target="_blank">删“自由”增党控 复旦章程大变脸引炮轰</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729071.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/FuDanUni-150x120.jpg" align ="left"></a>复旦大学大幅度修改章程的消息在社媒中刷屏，尤其是新章程中删除了“思想自由”，往后挪动了“学术独立”，大幅增加了“党”的内容，引发强烈争议。有网友斥：“留着这几句话装装门面也行啊，难道如今真的连门面都不用装，干脆裸奔了？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 7:40 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729038.md#1" target="_blank">中共央行外汇占款连降16个月 降幅扩大</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729038.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/190806101400100311-150x120.jpg" align ="left"></a>中共央行12月16日下午公布数据显示，11月份中共央行外汇占款连续第16个月下降，降幅较10月份扩大。11月份中国外汇占款和外汇储备双双下降。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 7:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728740.md#1" target="_blank">抖音过滤内容 在美国受质疑 转往加拿大</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728740.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1073256498-150x120.jpg" align ="left"></a>网络视频平台抖音（TikTok）正在扩建其加拿大团队，尽管该平台已涉嫌按中共政府的需要过滤内容。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 7:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729060.md#1" target="_blank">中共补贴企业数据曝光 中石化和广汽获最多</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729060.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/09/909071515262198-150x120.jpg" align ="left"></a>中国企业2019年收到的国家补贴继续扩大，今年前9个月发放补贴款增长了15%，其中中石化和汽车制造商获得的补贴最多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:55 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728635.md#1" target="_blank">沉寂一年正式复出 范冰冰连续两天受邀走红毯</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728635.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/GettyImages-957395718-150x120.jpg" align ="left"></a>去年因被举报偷税漏税遭官方重罚的大陆女星范冰冰，在沉寂一年后东山再起。据陆媒16日披露，范冰冰刚刚赴美为好莱坞影片《355》配音归国，又连着两天受邀走红毯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 6:44 AM							</td></tr>
@@ -31,6 +29,14 @@
 经过18个月的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 9:26 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728023.md#1" target="_blank">大陆阿胶需求不减 未来5年世界毛驴将减半</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728023.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/G21A1808-150x120.jpg" align ="left"></a>位于英国的慈善机构The Donkey Sanctuary日前表示，因大陆对阿胶的需求不减，如果不加以控制，未来5年，全球一半的毛驴都要被宰杀，而且将影响5亿贫困人口的生活。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 7:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727619.md#1" target="_blank">惠誉下调澳门评级展望</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727619.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/01/1701170854291758-150x120.jpg" align ="left"></a>惠誉日前发表的评级报告将澳门的评级展望由“稳定”下调至“负面”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:04 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727105.md#1" target="_blank">美银美林：美国大选后贸易战或再次升级</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727105.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/000_1GC5EJ-600x400-1-1-150x120.jpg" align ="left"></a>国际投行美银美林日前发布报告表示，现在预期美中达成第一阶段贸易协议后会令贸易战持续降级为时尚早，美中贸易和技术方面之战可能在大选后再次升级。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 3:48 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727486.md#1" target="_blank">《环球时报》新媒体部主任自曝 被拒发美签</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727486.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-143452837-150x120.jpg" align ="left"></a>中共喉舌《环球时报》的新媒体部主任郝珺石于周一（12月16日）在微博上自曝，他申请美国签证被拒绝，结果引来大批网民的嘲讽。
+
+郝珺石在微博上说，他被美国驻华大使馆拒签了。他还出示美国驻华大使馆的拒签通知书。
+
+该通知书表示，郝珺石不具备申请非移民签证的资格。他没有提供他在本次访美行程结束之后不得不回国的证明。
+
+该通知书还说，这次的拒签不可以上诉.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 2:35 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728228.md#1" target="_blank">助中共官员非法来台 白狼之子旅行社遭搜索</a><br></h3>新北市水资源经济发展协会负责人洪庆淋涉嫌勾结国内20多间非甲种旅行社，伪造文件以专业交流名义申请入台许可，让至少逾5千名中国公务员非法来台；检方17日针对包含统促党总裁“白狼”张安乐之子张玮经营的“华夏大地旅行社”在内的6家旅行社进行第二波搜索。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:35 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727611.md#1" target="_blank">河南许昌公安局副局长彭杰投案被调查</a><br></h3>12月17日，官方通报，许昌市公安局党委委员、副局长、正县级侦查员彭杰涉嫌严重违纪违法，已主动投案，目前正接受调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 7:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727202.md#1" target="_blank">浙江矿山塌方2千平方米厂房被埋 3人失踪</a><br></h3>12月17日10时后，浙江省丽水市松阳县新兴镇安露源机制砂有限公司矿山突然塌方，2000余平方米厂房被掩埋，导致3人失踪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 6:39 PM							</td></tr>
