--- a/gb/nf3046_3.md
+++ b/gb/nf3046_3.md
@@ -33,7 +33,6 @@
        
 
 &nbsp;......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月15日 12:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/10/14/n11586464.md#1" target="_blank">每日三退声明精选（2019/10/13）</a><br></h3>我们很早就知道中共不是什么好东西，但是受国内的洗脑教育，一直觉得国内的乱像是受2000年封建社会历史的影响，四九年中共建政以后的历史一直都是空白，中共对这70年历史讳莫如深，只讲什么丰功伟绩，大跃进、文革、六四从来没有讲。大部分年轻人甚至不知道六四、法轮功是怎么回事。直到一个炼法轮功的朋友和我们聊天，详细介绍了中共四九年以后的历史，才知道我们生活在怎样一个世.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月14日 11:48 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/10/13/n11584815.md#1" target="_blank">每日三退声明精选（2019/10/12）</a><br></h3>现在终于看到中共可怕的地方在于，一日不除这个恶魔，全部华人都得遭殃。看看现在全世界对华人的印象和限制，很多时候都是因为中共。还有很多海外的大陆华人被中共的毒素中毒颇深，连马化腾、马云等富人的命运都不足以唤醒他们。我觉得很可怕，真的很邪恶。为了给自己一个安全的未来，本人在此在精神上和身份上退出中共党团队，脱离中共的辖制，抛弃邪恶，走向自由！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月13日 11:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/10/11/n11581660.md#1" target="_blank">每日三退声明精选（2019/10/10）</a><br></h3>上学时被欺骗加入少先队组织，中共说血旗是血染成的，中共的政权确实是建立在苦难的中国民众的累累白骨之上的。在这个意义上塔利班去北京只是去膜拜祖师爷去的，也许它们想从中共那里学到，如何像中共在香港一样无恶不作制造巨大恐怖效应，但又不受到惩罚。中共用一个字：邪；两个字：邪教；三个字：假、恶、斗；四个字：邪恶至极；五个字：马克思主义；九个字：邪、骗、扇、斗、抢、痞、.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月11日 10:58 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/10/10/n11579638.md#1" target="_blank">每日三退声明精选（2019/10/09）</a><br></h3>我是大陆某著名风景区的居民，在外地做生意多年后回家，想申请在自己的宅基地上盖房子，没想到村干部说不行，后来再申请，村干部说拿过来一万块后再说。这些村干部家里的钱都花不完还给家人整上低保，村里的贫困户申请低保却整不来。这就是当今中国大陆的世道，老百姓无处伸冤，可以说中共邪党就是当今中国最大的黑社会，在此，我声明退出中共邪党的少先队等邪恶组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月10日 10:08 AM							</td></tr>
@@ -53,5 +52,6 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/9/19/n11531343.md#1" target="_blank">每日三退声明精选（2019/09/18）</a><br></h3>作为华为员工，我糊里糊涂加入了中国共产党。我看到华为专门监控老百姓，太坏了。现声明退出邪恶的中国共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 11:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/9/18/n11528820.md#1" target="_blank">每日三退声明精选（2019/09/17）</a><br></h3>作为在中国长大的小孩，我小时候也糊里糊涂加入了少先队和共青团。甚至我还曾经对共匪歪曲事实的过往“光辉历史”宣传深信不疑，真心认为过去的的所谓“革命先烈”是好的，只是掌权后人心变坏了。我越长大越认识到这是一个黑白颠倒的社会，自由和公义在这里被践踏，奴役和奸诈却是无处不在。但我不知道为什么会这样。所有人都告诉我，这很正常，哪里都一样，你要长大要适应社会，而不是让.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月18日 11:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/9/16/n11524267.md#1" target="_blank">每日三退声明精选（2019/09/15）</a><br></h3>我是一名新疆人，了解中共利用集中营等方式对新疆人的严重迫害情况。通过了解真相，我也知道了中共对法轮功的残酷迫害，其中活摘器官就是其残忍的迫害手段之一。一直以来中共都在利用着各种政治运动迫害中国人，在思想意识上进行强化洗脑教育，摧残和毁灭他们的灵魂和肉体，手段极为残忍、邪恶，纵观这段历史，这个邪党对中国人所犯下的滔天罪恶，真是罄竹难书。由此可见中共不仅仅是一个.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 11:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/9/13/n11519642.md#1" target="_blank">每日三退声明精选（2019/09/13）</a><br></h3>我父亲的钢厂已被共匪拿走，明真相，今天我，郝亮丽（化名）声明退出中共共青团、少先队，特此证明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月14日 12:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nhrnni253/djy/blob/master/gb/nf3046_3.md#1<br><a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nhrnni253/djy/blob/master/gb/nf3046_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_3.htm">http://www.epochtimes.com/gb/nf3046_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
