--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -5,7 +5,7 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11733062.md#1" target="_blank">未来半数年轻人买不起房 加拿大正迈向租房时代</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11733062.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_40770295-150x120.jpg" align ="left"></a>加拿大一些大城市的房价上涨失控多年，最近几年涨幅虽放缓，但还是在涨，未来恐怕不到半数年轻人买得起房，加拿大正日益迈向租房时代。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 11:05 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11732537.md#1" target="_blank">40%亚洲人喝酒会脸红  研究：恐易患失智症</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11732537.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/drinking_1092323018-150x120.jpg" align ="left"></a>新研究发现，喝酒后会脸红的人可能更易患老年失智症（又称阿兹海默症）。喝酒后的脸红反应是基因ALDH2变体造成。ALDH2基因的一项重要功能是清除酒精产生的乙醛毒素。其变体基因ALDH2*2的清除能力则大大降低，导致乙醛积累，身体呈现脸红的反应和炎症。酒精对携带这种基因的老年失智患者细胞损害更大......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 6:15 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11732330.md#1" target="_blank">无聊时别再滑手机了 8件事提高你的生产力</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11732330.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/origami-papercrafting-origami-boxes-150x120.jpg" align ="left"></a>无聊时除了滑手机，你也可以做点提升自己、有建设性的事。以下8个建议不妨试试：1. 处理小事情；2. 清理杂物；3. 清除干扰；4. 处理担心事；5. 吸收新知；6. 看书；7. 运动、静坐；8. 做“无聊事”。研究发现，“做无聊的事”可以提升创造力。所以，不必害怕无聊，偶尔让脑袋放空，反而有好处。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 5:47 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11731339.md#1" target="_blank">吞口水补肾精！4招最简单养肾动作 天天都能做</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11731339.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/kidney-exercise2-1218-1-150x120.jpg" align ="left"></a>中医认为肾为先天之本，在所有的养生方法中，养肾是至关重要的一环。一些简单而又日常的动作，就可以达到养肾的效果。要谈养肾，必须要先了解中医的肾是什么，有哪些功能。肾位于腰部脊柱两侧，左右各一。肾的主要生理功能是：主藏精，主水，主纳气。4个日常养肾动作：1. 吞唾液；2. 腹式呼吸法；3. 擦涌泉穴；4. 擦肾俞穴......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:40 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11731339.md#1" target="_blank">吞口水补肾精！中医教你最简单养肾动作</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11731339.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/kidney-exercise2-1218-1-150x120.jpg" align ="left"></a>中医认为肾为先天之本，在所有的养生方法中，养肾是至关重要的一环。一些简单而又日常的动作，就可以达到养肾的效果。要谈养肾，必须要先了解中医的肾是什么，有哪些功能。肾位于腰部脊柱两侧，左右各一。肾的主要生理功能是：主藏精，主水，主纳气。4个日常养肾动作：1. 吞唾液；2. 腹式呼吸法；3. 擦涌泉穴；4. 擦肾俞穴......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 2:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11730098.md#1" target="_blank">比猫熊珍贵 全球仅400只苏格兰野猫 野放工程大</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11730098.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/e6e35ccd84cac8b0b12f421f6388bf03-150x120.jpg" align ="left"></a>比中国大猫熊还要珍贵，苏格兰野猫一度濒危到只剩35只，经努力复育后，目前全球已达400只。苏格兰皇家动物学会（RZSS）获得欧盟捐赠320万英镑，（约台币1亿2900万元）预定2020年野放60只苏格兰野猫。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 12:34 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11730157.md#1" target="_blank">回收塑胶变椅子 减塑工程师做更多椅子帮学生</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11730157.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/37868aad89ef5ced2a52ac2295039de5-150x120.jpg" align ="left"></a>我们都知道塑胶垃圾对环境的危害巨大，然而无法分解的塑胶垃圾如何处理呢？上图是机械工程师温彻斯特?勒门（Winchester Lemen）的创意，这些色彩鲜艳的椅子是用回收的废料塑胶制成的呢！勒门因此得到了各界的认同。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 12:22 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11731464.md#1" target="_blank">加11月房价创经济衰退以来最低</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11731464.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Vancouver-single-house-Surrey-IMG_1081-150x120.jpg" class=" align ="left"></a>渥太华周三（12月18日）公布的数据显示，加拿大11月房价再次下跌，这是连续第3个月下跌，也是除经济衰退外11月房价跌幅最大的一次。多伦多房价连续第4个月下跌，温哥华房价持平。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 8:39 AM			</td></tr>
