--- a/gb/news2007_4.md
+++ b/gb/news2007_4.md
@@ -23,7 +23,7 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/10/2/9/n2813971.md#1" target="_blank">诚心敬道 让他经历了奇迹</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/10/2/9/n2813971.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/02/PK2A003145N000000010AA-new-e1569573312432-150x120.jpg" align ="left"></a>十天之后，那棵小树已长到凌空，金玉会自己飞到他家，宝物自己堆积，非常富有。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 5:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11707955.md#1" target="_blank">美5岁男童出席收养仪式 全班同学到场祝贺</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11707955.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_51021337_Subscription_L-150x120.jpg" align ="left"></a>美国密西根州一名5岁男童日前被一对夫妇正式收养。他在幼儿园的全班同学参加他的收养仪式，并向他表达支持与祝福之意，场面温馨感人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 1:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/27/n11685089.md#1" target="_blank">明朝状元唐皋 朝鲜百姓感念的“天使”</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/27/n11685089.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/05/1105220921242223_1-150x120.jpg" align ="left"></a>少年正在读书，一位少女舔破窗纸，屡屡骚扰。少年题了一句诗，感得神明赐下神火。穷苦的少年历尽磨折，终是峰回路转，并成为朝鲜百姓感念的大明“天使”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 12:45 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/1/n11692566.md#1" target="_blank">天地清明引(130) 明光殒－班师回朝2</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/1/n11692566.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/MokoShuraiE-Kotoba_I-150x120.jpg" align ="left"></a>国子监，稽世予下朝，一路行来，多处人群聚集，百姓围观，正自诧异间，国子监已至。付陵悦打轿，稽世予步出，便要进门，瞥见门口告示栏，贴着刑部告示：“禁曲《满庭芳》蛊惑人心……景阳现已服诛，昭告天下，百姓严禁再弹，免受其蛊惑。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 8:00 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711109.md#1" target="_blank">虞美人．忧</a><br></h3> 严冬万木萧疏处，一片忧伤度。 干枯栎叶不离枝，但有风来声瑟感心知。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 12:13 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711098.md#1" target="_blank">七律：陀螺</a><br></h3> 河冰初厚打陀螺， 鞭子抡圆脆响多。 嬉戏之人求热汗， 飞旋螺哨送欢歌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:13 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711055.md#1" target="_blank">五律：雾</a><br></h3>海市横空出，蜃楼摇地斜。 众芳隐深幕，高影透轻纱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:56 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711048.md#1" target="_blank">台湾古典诗：中美贸易战（二）</a><br></h3>美中谈判鬼胎怀，烽火延烧伏笔埋， 宝岛深耕冲击少，全球贸易扫阴霾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:49 PM			</td></tr>
