--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -19,7 +19,7 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11723672.md#1" target="_blank">程晓容：林郑进京述职 中南海如何收拾残局</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11723672.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912080230442188-1-150x120.jpg" align ="left"></a>当百万民众怒吼，国际社会同声援港时，中南海若再对林郑表示坚决支持，还要重复洗脑谎言、续演恐怖，那真是自判死刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 4:48 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/14/n11723179.md#1" target="_blank">袁斌：10万元医疗费何以成了不能承受之重？</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/14/n11723179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-2-1-600x400-2-150x120.gif" align ="left"></a>一个患病的中年男子，因为付不起10万元医疗费而出走离世，你信吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 7:29 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/14/n11723003.md#1" target="_blank">周晓辉：中美达阶段贸易协议 北京头戴紧箍咒</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/14/n11723003.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1126143684-600x400-1-150x120.jpg" align ="left"></a>在12月15日美国即将加征新一轮关税前两日，中美达成了第一阶段贸易协议。双方都对外公布了协议文本的大致内容，即协议文本包括序言、知识产权、技术转让、食品和农产品、金融服务、汇率和透明度、扩大贸易、双边评估和争端解决（执行机制）、最终条款九个章节。而这些正是美国川普（特朗普）政府所一直坚持的，即美中达成的贸易协议，必须包.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 5:44 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/14/n11722943.md#1" target="_blank">颜丹：香港警察被呼吁加薪背后的猫腻</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/14/n11722943.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/191111103844100615-600x400-1-150x120.jpg" align ="left"></a>已负债累累、捉襟见肘的中共若还想靠财力来笼络人心，恐怕是心有余而力不足了。既如此，“支持警队加薪”也不过就是一句空洞虚伪的口号而已。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 3:20 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727243.md#1" target="_blank">洪微：英超球星也遭中共封杀</a><br></h3>美国NBA被中共封杀的事件，余音还在，欧洲又起波澜，著名足球明星梅苏特·厄齐尔（Mesut ?zil）也遭到中共封杀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 12:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725968.md#1" target="_blank">夏小强：美中第一阶段贸易协议得失谈</a><br></h3>此次美中达成的第一阶段贸易协议，总体上是中共妥协退让的成分占多，从结果来讲，美方的得大于失。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 8:05 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725845.md#1" target="_blank">吕锡民：服务业与城市化——全球宏观经济转型</a><br></h3>就像人类成长一样，跟随着年龄的增加，生活结构也会产生变化，国家经济亦是如此，不是一昧追求GDP成长并随之起舞。换句话说，如同人类四肢长大，身上衣服穿着应会产生变化，类似台湾的开发中国家，如果整体经济想要进入欧美先进国家的高收入境界，势必以既合乎历史潮流，又合乎人类文明规律前进，不断实施宏观经济结构调整，从农业进展到工业.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月16日 6:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725813.md#1" target="_blank">郑纯清：厦门地铁塌陷吟</a><br></h3>红朝验收半月间，
