--- a/gb/ncid277_5.md
+++ b/gb/ncid277_5.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/4/n11701016.md#1" target="_blank">美为何点名要制裁《大公报》《文汇报》</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/4/n11701016.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/190819050754100311-1-150x120.jpg" align ="left"></a>美国通过的《香港人权与民主法案》中直接点名制裁两家亲共港媒《大公报》和《文汇报》，随后这两家媒体（同属大公文汇传媒集团）发出捍卫“新闻自由”的“严正声明”，被网民讥讽红媒双重标准——在被制裁时大喊“新闻自由”，在剥夺别人“新闻自由”时却理直气壮。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 10:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11716717.md#1" target="_blank">高以翔代表作插曲主唱辞世 范玮琪发文悼念</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11716717.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/yixianggao-150x120.jpg" align ="left"></a>台湾艺人高以翔11月27日凌晨在大陆录制浙江卫视综艺节目《追我吧》时猝逝，当亲友与粉丝还沉浸在一片悲痛之中时，12月10日晚又惊传噩耗，高以翔三年前主演的《遇见王沥川》剧集中插曲的演唱者——61岁的玛丽?芙瑞德克森（Marie Fredriksson）病逝，让作为高以翔的好友和玛丽?芙瑞德克森粉丝的台湾歌手范玮琪（范范）悲恸泪诉：“太多伤心的事。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 7:34 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11716783.md#1" target="_blank">《禁蒙面法》失效 梁家杰：北京没有选择余地</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11716783.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/190926043654100484-150x120.jpg" align ="left"></a>香港高等法院上诉庭周二（12月10日）拒绝就《禁蒙面法》违宪案批出暂缓执行令，导致该法暂时失效。香港资深大律师梁家杰表示，对此判决不感到意外，北京最好什么也不要说，相信习近平态度会软化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 7:06 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11716613.md#1" target="_blank">美前官员：中共陷困境 川普不需要贸易协议</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11716613.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1180494134-1-150x120.jpg" align ="left"></a>美国前国务院资深官员周三（12月11日）撰文说，总统川普（特朗普）不需要现在达成协议、给陷入困境中国共产党续命。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 6:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/13/n11719940.md#1" target="_blank">中共经济会议结束 七常委出席不见王岐山</a><br></h3>为期3天的中共中央经济工作会议在北京举行，该会议承认经济下行压力加大。当天，习近平、李克强等中共七常委出席会议，但独缺中共国家副主席王岐山。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 12:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/12/n11718227.md#1" target="_blank">五千中共官员非法来台 基进：实际恐超数倍</a><br></h3>台北地检署近日查出，新北市水资源经济发展协会等机构涉嫌与非甲种旅行社业者共谋，提供假专业交流活动相关资料，2017年开始安排至少5,000名中国公务人员及其亲友来台。台湾基进党主席陈奕齐警告，实际时间点可能更早、非法来台数量更多，渗透规模恐超乎预期。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 5:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/12/n11718649.md#1" target="_blank">陕西省纪委“厅级内鬼”胡传祥被判9年</a><br></h3>12月10日，中共陕西省纪委、省预防腐败局预防腐败室前主任胡传祥，因行贿、受贿罪而被判处9年，并处罚金320万元（人民币）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:39 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/12/n11717043.md#1" target="_blank">【翻墙必看】中共高层为自己准备后路</a><br></h3>如果两年前有人说中共将很快走向覆亡，很多人认为是痴人说梦，那么在2019年即将走过之际，越来越多的人，无论是西方政要，还是中共官员和普通民众，已经相信这并非是什么不切实际的幻梦。因为中共正在往死路上狂奔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 9:20 PM							</td></tr>
